--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   },
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "git push heroku main"
   },
-  "proxy": "http://localhost:3001",  
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
